# cosvr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompileProto.cmake  FindProtobuf.cmake  FindYaml.cmake  common.cmake  linux.cmake  windows.cmake
dep/bnet/: bnet.hpp  config.hpp
dep/bnet/base/: client.hpp  csession.hpp  session_mgr.hpp  traits.hpp  transfer.hpp
dep/bnet/tool/: function_traits.hpp  md5_constexpr.hpp  str.hpp  util.hpp
dep/misc/: ikcp.h  kcp_util.hpp  nameof.hpp
dep/protobuf/: CMakeLists.txt
dep/protobuf/cmake/: libabsl.cmake  libprotobuf.cmake  libprotoc.cmake  protoc.cmake  utf8_range.cmake
dep/protobuf/src/google/protobuf/: any_test.pb.cc  any_test.pb.h  map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_proto3_unittest.pb.cc  map_proto3_unittest.pb.h  map_unittest.pb.cc  map_unittest.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.cc  unittest_arena.pb.h  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.cc  unittest_embed_optimize_for.pb.h  unittest_empty.pb.cc  unittest_empty.pb.h  unittest_enormous_descriptor.pb.cc  unittest_features.pb.cc  unittest_features.pb.h  unittest_import.pb.cc  unittest_import.pb.h  unittest_import_lite.pb.cc  unittest_import_lite.pb.h  unittest_import_public.pb.cc  unittest_import_public.pb.h  unittest_import_public_lite.pb.cc  unittest_import_public_lite.pb.h  unittest_invalid_features.pb.cc  unittest_invalid_features.pb.h  unittest_lazy_dependencies.pb.cc  unittest_lazy_dependencies.pb.h  unittest_lazy_dependencies_custom_option.pb.cc  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.cc  (+35 more)
dep/protobuf/src/google/protobuf/compiler/cpp/: test_bad_identifiers.pb.cc  test_bad_identifiers.pb.h  test_large_enum_value.pb.cc  test_large_enum_value.pb.h
dep/protobuf/src/google/protobuf/util/: json_format.pb.cc  json_format.pb.h  json_format_proto3.pb.cc  json_format_proto3.pb.h  message_differencer_unittest.pb.cc  message_differencer_unittest.pb.h  message_differencer_unittest_proto3.pb.cc  message_differencer_unittest_proto3.pb.h
examples/: CMakeLists.txt  error.hpp  log.hpp  main.cpp  net.hpp  redis.hpp  router.hpp  rpc.hpp  test.proto  test_config.yaml  timer.hpp  uuid.hpp  yaml.hpp
modules/agent/: actor.hpp  agent.hpp  mailbox.hpp  queue.hpp  router.hpp
modules/app/: app.hpp  config.hpp  iopool.hpp
modules/coder/: coder.hpp  json.hpp  protobuf.hpp  stream.hpp
modules/common/: define.hpp  error.hpp
modules/config/: yaml_cfg.hpp
modules/error/: call_stack.hpp  error.hpp
modules/log/: config.hpp  detail.hpp  log.hpp  logsink.hpp  logutil.hpp
modules/net/: event.hpp  net.hpp  proxy.hpp  stream.hpp
modules/protocol/: net_protocol.hpp  rds_protocol.hpp  rpc_protocol.hpp
modules/redis/: cluster.hpp  config.hpp  define.hpp  execute.hpp  net.hpp  object.hpp  policy.hpp  pubsub.hpp  redis.hpp  resp.hpp
modules/rpc/: config.hpp  rpc.hpp  rpc_client.hpp  rpc_context.hpp  rpc_execute.hpp  rpc_router.hpp  rpc_server.hpp  util.hpp
modules/timer/: logic_timer.hpp  time_util.hpp  time_wheel.hpp  timer.hpp
modules/util/: backward.hpp  concurrentqueue.hpp  crc16.hpp  expected.hpp  format.hpp  function_name.hpp  magic_names.hpp  md5_constexpr.hpp  meta_string.hpp  singleton.hpp  string_finder.hpp  type_traits.hpp  utils.hpp
modules/uuid/: append_hex.hpp  comparable.hpp  config.hpp  fnv.hpp  ieee_754.hpp  network_order.hpp  parser_state.hpp  sha1.hpp  uuid.hpp
